--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
   </head>
   <body>
-    <nav class="navbar navbar-expand-sm bg-warning navbar-dark">
+    <nav style="width: 100%;font-size: 14px;" class="navbar navbar-expand-sm bg-warning navbar-dark">
       <a class="navbar-brand text-info" href="#">OPTIAM HECM</a>
 
       <div class="nav-item dropdown">
