--- a/src/app/loanvendor/loanvendor.component.html
+++ b/src/app/loanvendor/loanvendor.component.html
@@ -1,5 +1,5 @@
 <router-outlet></router-outlet>
-<table>
+<table style="width: 100%;text-align: center;">
   <tr>
     <th>
       <i class="fas fa-table"></i>
@@ -28,7 +28,7 @@
 
               <td>
                 <button (click)="deleteLoanvendor(loanvendor.id)">
-                  <i class="fas fa-dustbin"></i>
+                  <i class="fas fa-trash-alt"></i>
                 </button>
               </td>
               <td>
