--- a/src/app/payform/payform.component.html
+++ b/src/app/payform/payform.component.html
@@ -68,10 +68,10 @@
                       <input
                         type="text"
                         class="form-control"
-                        id="modified"
+                        id="modifiedtenture"
                         required
                         ngModel
-                        name="modified"
+                        name="modifiedtenture"
                       />
                     </div>
                   </div>
